Mise à jour README.md et ajouts versions et liens